browser-extension/crates/core/tests/snapshots/approved_test__extractor_approved@ecommerce_product.input.html.snap
---
source: crates/core/tests/approved_test.rs
expression: extracted
input_file: crates/core/tests/testdata/html/ecommerce_product.input.html
---
{
  "title": "Sony Alpha a7 III Mirrorless Camera | ExampleStore",
  "sections": [
    {
      "kind": "paragraph",
      "text": "[Image: Front view of Sony Alpha a7 III camera body (/img/sony-a7-iii-front.jpg)]",
      "depth": null,
      "selector": "img"
    },
    {
      "kind": "paragraph",
      "text": "[Image: Back view of Sony Alpha a7 III camera body showing LCD screen (/img/sony-a7-iii-back.jpg)]",
      "depth": null,
      "selector": "img"
    },
    {
      "kind": "heading",
      "text": "Sony Alpha a7 III Mirrorless Camera Body",
      "depth": 1,
      "selector": "h1"
    },
    {
      "kind": "link",
      "text": "1,245 ratings (#reviews)",
      "depth": null,
      "selector": "a"
    },
    {
      "kind": "paragraph",
      "text": "Advanced 24.2MP BSI Full-frame Image Sensor w/ 1.8X readout speed. 15-stop dynamic range, 14-bit uncompressed RAW, ISO 50 to 204,800. Compatible with Sony E-mount lenses.",
      "depth": null,
      "selector": "p"
    },
    {
      "kind": "list",
      "text": "- 24.2MP Full-Frame Exmor R BSI CMOS Sensor\n- BIONZ X Image Processor & Front-End LSI\n- 693-Point Hybrid AF System\n- UHD 4K30p Video with HLG & S-Log3 Gammas",
      "depth": null,
      "selector": "ul"
    },
    {
      "kind": "paragraph",
      "text": "[Button: Add to Cart]",
      "depth": null,
      "selector": "button"
    },
    {
      "kind": "paragraph",
      "text": "[Button: Buy Now]",
      "depth": null,
      "selector": "button"
    },
    {
      "kind": "heading",
      "text": "Customers who bought this also bought",
      "depth": 2,
      "selector": "h2"
    },
    {
      "kind": "paragraph",
      "text": "Sony FE 24-70mm f/2.8 GM Lens",
      "depth": null,
      "selector": "text"
    },
    {
      "kind": "paragraph",
      "text": "SanDisk 128GB Extreme PRO SDXC Memory Card",
      "depth": null,
      "selector": "text"
    },
    {
      "kind": "heading",
      "text": "Customer Reviews",
      "depth": 2,
      "selector": "h2"
    },
    {
      "kind": "heading",
      "text": "Incredible autofocus!",
      "depth": 4,
      "selector": "h4"
    },
    {
      "kind": "paragraph",
      "text": "Upgraded from my old DSLR and the eye-AF on this is simply magical.",
      "depth": null,
      "selector": "p"
    }
  ],
  "metadata": {
    "og_title": null,
    "og_description": null,
    "lang": "en",
    "canonical_url": null
  }
}
