browser-extension/crates/core/tests/snapshots/approved_test__extractor_approved@edge_cases.input.html.snap
---
source: crates/core/tests/approved_test.rs
expression: extracted
input_file: crates/core/tests/testdata/html/edge_cases.input.html
---
{
  "title": "Edge Cases",
  "sections": [
    {
      "kind": "paragraph",
      "text": "This is a very long stray text node that does not live inside a paragraph tag but should still be captured because it exceeds the length heuristic of 20 characters.",
      "depth": null,
      "selector": "text"
    },
    {
      "kind": "paragraph",
      "text": "[Image: A descriptive image alt text (test.jpg)]",
      "depth": null,
      "selector": "img"
    },
    {
      "kind": "paragraph",
      "text": "[Image: A descriptive aria label (test2.jpg)]",
      "depth": null,
      "selector": "img"
    },
    {
      "kind": "link",
      "text": "Download the file here (https://example.com/download)",
      "depth": null,
      "selector": "a"
    },
    {
      "kind": "paragraph",
      "text": "[Button: Click Me]",
      "depth": null,
      "selector": "button"
    }
  ],
  "metadata": {
    "og_title": null,
    "og_description": null,
    "lang": null,
    "canonical_url": null
  }
}
