browser-extension/crates/core/tests/snapshots/approved_test__extractor_approved@form_extraction.input.html.snap
---
source: crates/core/tests/approved_test.rs
expression: extracted
input_file: crates/core/tests/testdata/html/form_extraction.input.html
---
{
  "title": "",
  "sections": [
    {
      "kind": "heading",
      "text": "Sign In",
      "depth": 1,
      "selector": "h1"
    }
  ],
  "metadata": {
    "og_title": null,
    "og_description": null,
    "lang": null,
    "canonical_url": null
  }
}
