browser-extension/crates/core/tests/snapshots/approved_test__extractor_approved@hidden_elements.input.html.snap
---
source: crates/core/tests/approved_test.rs
expression: extracted
input_file: crates/core/tests/testdata/html/hidden_elements.input.html
---
{
  "title": "",
  "sections": [
    {
      "kind": "paragraph",
      "text": "Visible paragraph",
      "depth": null,
      "selector": "p"
    },
    {
      "kind": "paragraph",
      "text": "Hidden via attribute",
      "depth": null,
      "selector": "p"
    },
    {
      "kind": "paragraph",
      "text": "Hidden via aria-hidden",
      "depth": null,
      "selector": "p"
    },
    {
      "kind": "paragraph",
      "text": "Hidden via display none",
      "depth": null,
      "selector": "p"
    },
    {
      "kind": "paragraph",
      "text": "Hidden via visibility hidden",
      "depth": null,
      "selector": "p"
    },
    {
      "kind": "paragraph",
      "text": "Another visible paragraph",
      "depth": null,
      "selector": "p"
    }
  ],
  "metadata": {
    "og_title": null,
    "og_description": null,
    "lang": null,
    "canonical_url": null
  }
}
