browser-extension/crates/core/tests/snapshots/approved_test__extractor_approved@iframe.input.html.snap
---
source: crates/core/tests/approved_test.rs
expression: extracted
input_file: crates/core/tests/testdata/html/iframe.input.html
---
{
  "title": "Iframes",
  "sections": [
    {
      "kind": "paragraph",
      "text": "Watch this video:",
      "depth": null,
      "selector": "p"
    },
    {
      "kind": "paragraph",
      "text": "[Iframe: Rick Astley - Never Gonna Give You Up (Official Music Video)](https://www.youtube.com/embed/dQw4w9WgXcQ)",
      "depth": null,
      "selector": "iframe"
    },
    {
      "kind": "paragraph",
      "text": "[Iframe](https://example.com/ad)",
      "depth": null,
      "selector": "iframe"
    }
  ],
  "metadata": {
    "og_title": null,
    "og_description": null,
    "lang": null,
    "canonical_url": null
  }
}
