browser-extension/crates/core/tests/snapshots/approved_test__extractor_approved@json_ld_metadata.input.html.snap
---
source: crates/core/tests/approved_test.rs
expression: extracted
input_file: crates/core/tests/testdata/html/json_ld_metadata.input.html
---
{
  "title": "Article Page",
  "sections": [
    {
      "kind": "paragraph",
      "text": "Article content here.",
      "depth": null,
      "selector": "p"
    }
  ],
  "metadata": {
    "og_title": "JSON-LD Title",
    "og_description": "Structured data description from JSON-LD",
    "lang": null,
    "canonical_url": null
  }
}
